# frogdb

./: .dockerignore  .gitignore  .mcp.json.example  .mise.toml  AGENTS.md  AGPL-3.0.md  BSL-1.1.md  Brewfile  CHANGELOG.md  CLA-corporate.md  CLA-individual.md  CLAUDE.md  COMMERCIAL.md  COMPAT_TODO.md  CONTEXT-MAP.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.bench  Dockerfile.builder  Justfile  LICENSE.md  README.md  RELEASES.md  SECURITY.md  deny.toml  lefthook.yml  lychee.toml  package.json  pyproject.toml  release-please-config.json  rust-toolchain.toml  shell.nix
benches/: Cargo.toml
benches/benches/: commands.rs  persistence.rs  protocol.rs  store.rs
crates/commands/: Cargo.toml
crates/commands/src/: basic.rs  bitmap.rs  blocking.rs  bloom.rs  expiry.rs  generic.rs  geo.rs  hash.rs  hyperloglog.rs  json.rs  lib.rs  list.rs  scan.rs  set.rs  sort.rs  stream.rs  string.rs  timeseries.rs  utils.rs
crates/core/: Cargo.toml
crates/core/src/: args.rs  bitmap.rs  bloom.rs  client_registry.rs  command.rs  command_macro.rs  error.rs  geo.rs  glob.rs  hyperloglog.rs  json.rs  latency.rs  lib.rs  metrics.rs  noop.rs  pubsub.rs  registry.rs  shard.rs  slowlog.rs  store.rs  sync.rs  types.rs
crates/core/tests/: concurrency.rs  proptest_glob.rs  proptest_serialization.rs  proptest_types.rs
crates/debug/: Cargo.toml
crates/debug/src/: bundle.rs  lib.rs  memory.rs  web_ui.rs
crates/metrics/: Cargo.toml
crates/metrics-derive/: Cargo.toml
crates/metrics-derive/src/: lib.rs
crates/metrics/assets/: index.html
crates/metrics/src/: bundle.rs  config.rs  debug.rs  definitions.rs  hotshards.rs  labels.rs  latency_bands.rs  lib.rs  memorydiag.rs  otlp.rs  prometheus_recorder.rs  server.rs  status.rs  system.rs  testing.rs  tracing.rs
crates/metrics/tests/: debug_integration.rs  integration.rs  metrics_usage.rs  otel_unit_tests.rs  prometheus_unit_tests.rs  tracing_integration.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: command.rs  error.rs  lib.rs  response.rs
crates/protocol/tests/: proptest_protocol.rs
crates/redis-regression/: Cargo.toml
crates/redis-regression/src/: lib.rs
crates/redis-regression/tests/: acl_regression.rs  acl_v2_regression.rs  cluster_scripting_regression.rs  dump_regression.rs  expire_regression.rs  functions_regression.rs  hash_regression.rs  hyperloglog_regression.rs  incr_regression.rs  info_command_regression.rs  info_regression.rs  limits_regression.rs  list2_regression.rs  list3_regression.rs  list_regression.rs  maxmemory_regression.rs  multi_regression.rs  networking_regression.rs  pause_regression.rs  pubsubshard_regression.rs  quit_regression.rs  scan_regression.rs  set_regression.rs  sort_regression.rs  stream_cgroups_regression.rs  stream_regression.rs  string_regression.rs  tracking_regression.rs  zset_regression.rs
crates/server/: Cargo.toml
crates/server/src/: acceptor.rs  cluster_bus.rs  config.rs  connection.rs  failure_detector.rs  latency_test.rs  lib.rs  main.rs  migrate.rs  net.rs  observability_server.rs  routing.rs  runtime_config.rs  server.rs
crates/server/tests/: functions.rs  integration.rs  integration_acl.rs  integration_admin.rs  integration_admin_port.rs  integration_basic.rs  integration_client.rs  integration_cluster.rs  integration_copy.rs  integration_debug_bundle.rs  integration_debug_http.rs  integration_dump_restore.rs  integration_hashes.rs  integration_json.rs  integration_lists.rs  integration_metrics.rs  integration_persistence.rs  integration_pubsub.rs  integration_replication.rs  integration_scripting.rs  integration_sets.rs  integration_sorted_sets.rs  integration_streams.rs  integration_strings.rs  integration_transactions.rs  property_tests.rs  proptest_commands.rs  resp3.rs  simulation.rs  timeseries.rs
crates/types/: Cargo.toml
crates/types/src/: bitmap.rs  error.rs  geo.rs  glob.rs  json.rs  lib.rs  skiplist.rs  types.rs
crates/vll/: Cargo.toml
crates/vll/src/: queue.rs
frog-cli/: Cargo.toml
frog-cli/src/: cli.rs  connection.rs  info_parser.rs  main.rs  output.rs  util.rs
frog-cli/src/commands/: acl.rs  backup.rs  benchmark.rs  cluster.rs  config.rs  data.rs  debug.rs  exec.rs  mod.rs  replication.rs  scan.rs  search.rs  stat.rs  subscribe.rs  upgrade.rs  watch.rs
frog-cli/src/ops/: backup.rs  config.rs  latency.rs  mod.rs  scan.rs
frog-cli/tests/: integration_acl.rs  integration_client.rs  integration_config.rs  integration_data.rs  integration_exec.rs  integration_health.rs  integration_scan.rs
frog-cli/tests/common/: setup.rs
frogctl/: CONTEXT.md  Cargo.toml
frogctl/src/: cli.rs  lib.rs  main.rs  output.rs
frogctl/src/commands/: backup.rs  client.rs  cluster.rs  config.rs  data.rs  debug.rs  health.rs  replication.rs  stat.rs  upgrade.rs  watch.rs
frogctl/src/ops/: config.rs  scan.rs
frogctl/tests/: integration_acl.rs  integration_client.rs  integration_config.rs  integration_data.rs  integration_exec.rs  integration_health.rs  integration_scan.rs  integration_upgrade.rs  main.rs
frogctl/tests/common/: setup.rs
frogdb-operator/: CONTEXT.md  Cargo.toml
frogdb-operator/.config/: nextest.toml
frogdb-operator/deploy/: crd.json
frogdb-operator/deploy/examples/: cluster.yaml  standalone.yaml
frogdb-operator/src/: config_gen.rs  controller.rs  crd.rs  health.rs  lib.rs  main.rs  telemetry.rs  testing.rs
frogdb-operator/src/resources/: configmap.rs  mod.rs  pdb.rs  service.rs  servicemonitor.rs  statefulset.rs
frogdb-operator/tests/: integration.rs  resource_builders.rs
frogdb-server/benchmarks/: Cargo.toml
frogdb-server/benchmarks/benches/: commands.rs  persistence.rs  protocol.rs  store.rs
frogdb-server/benchmarks/src/: lib.rs
frogdb-server/crates/acl/: Cargo.toml
frogdb-server/crates/browser-tests/: Cargo.toml
frogdb-server/crates/cluster/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: acl_parse.rs  resp_parse.rs  script_parse.rs
testing/fuzz/: .gitignore  Cargo.toml
tools/dashboard-gen/: Cargo.toml
tools/helm-gen/: Cargo.toml  askama.toml
tools/workflow-gen/: Cargo.toml
(+2426 files in other folders)
