[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/core",
    "crates/debug",
    "crates/server",
    "crates/metrics",
    "crates/metrics-derive",
    "crates/testing",
    "crates/browser-tests",
    "crates/frogdb-macros",
    "benches",
    "tools/helm-gen",
    "tools/dashboard-gen",
    "tools/workflow-gen",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
authors = ["Nathan Jordan"]
repository = "https://github.com/nathanjordan/frogdb"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "signal", "io-util", "time", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Protocol
bytes = "1"
bytes-utils = "0.1"
redis-protocol = { version = "5", features = ["bytes", "codec", "resp3"] }

# Data structures
griddle = "0.5"
bitflags = "2"
ordered-float = "4"
rand = "0.8"
parking_lot = "0.12"

# Property-based testing
proptest = "1"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
schemars = { version = "0.8", features = ["derive"] }
askama = "0.12"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh64"] }
crc16 = "0.4"
sha2 = "0.10"
hex = "0.4"
murmur3 = "0.5"

# Bloom filter
bitvec = "1.0"

# Testing - Concurrency
shuttle = { version = "0.8" }

# Testing - Network simulation
turmoil = { version = "0.6" }

# Persistence
rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }
tempfile = "3"

# Lua scripting
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"] }
sha1 = "0.10"
linked-hash-map = "0.5"

# JSON support
jsonpath-rust = "0.7"

# Internal crates
frogdb-protocol = { path = "crates/protocol" }
frogdb-core = { path = "crates/core" }
frogdb-debug = { path = "crates/debug" }
frogdb-metrics = { path = "crates/metrics" }
frogdb-metrics-derive = { path = "crates/metrics-derive" }
frogdb-testing = { path = "crates/testing" }

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# Raft consensus
openraft = { version = "0.9", features = ["serde", "storage-v2"] }

# HTTP server for admin API
axum = "0.7"
tower = "0.5"

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
