[workspace]
resolver = "2"
members = [
    "frogdb-server/crates/protocol",
    "frogdb-server/crates/types",
    "frogdb-server/crates/cluster",
    "frogdb-server/crates/persistence",
    "frogdb-server/crates/acl",
    "frogdb-server/crates/scripting",
    "frogdb-server/crates/vll",
    "frogdb-server/crates/replication",
    "frogdb-server/crates/commands",
    "frogdb-server/crates/core",
    "frogdb-server/crates/server",
    "frogdb-server/crates/debug",
    "frogdb-server/crates/telemetry",
    "frogdb-server/crates/metrics-derive",
    "frogdb-server/crates/testing",
    "frogdb-server/crates/browser-tests",
    "frogdb-server/crates/frogdb-macros",
    "frogdb-server/benchmarks",
    "frogdb-server/ops/helm/helm-gen",
    "frogdb-server/ops/grafana/dashboard-gen",
    "frogdb-server/crates/tokio-coz",
    "frogdb-server/crates/test-harness",
    "frogdb-server/crates/redis-regression",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSL-1.1"
authors = ["Nathan Jordan"]
repository = "https://github.com/nathanjordan/frogdb"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "signal", "io-util", "time", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Protocol
bytes = "1"
bytes-utils = "0.1"
redis-protocol = { version = "5", features = ["bytes", "codec", "resp3"] }

# Float formatting
ryu = "1"

# Data structures
griddle = "0.5"
bitflags = "2"
ordered-float = "4"
rand = "0.8"
parking_lot = "0.12"
dashmap = "6"
smallvec = "1"

# Property-based testing
proptest = "1"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
schemars = { version = "0.8", features = ["derive"] }
askama = "0.12"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
rolling-file = "0.2"

# Error handling
thiserror = "2"
anyhow = "1"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh64"] }
crc16 = "0.4"
sha2 = "0.10"
hex = "0.4"
murmur3 = "0.5"

# Bloom filter
bitvec = "1.0"

# Testing - Concurrency
shuttle = { version = "0.8" }

# Testing - Network simulation
turmoil = { version = "0.6" }

# Persistence
rocksdb = { version = "0.24", default-features = false, features = ["multi-threaded-cf", "lz4", "snappy", "zstd"] }
flume = "0.11"
tempfile = "3"

# Lua scripting
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"] }
sha1 = "0.10"
linked-hash-map = "0.5"

# JSON support
jsonpath-rust = "0.7"

# Internal crates
frogdb-vll = { path = "frogdb-server/crates/vll" }
frogdb-replication = { path = "frogdb-server/crates/replication" }
frogdb-commands = { path = "frogdb-server/crates/commands" }
frogdb-protocol = { path = "frogdb-server/crates/protocol" }
frogdb-types = { path = "frogdb-server/crates/types" }
frogdb-cluster = { path = "frogdb-server/crates/cluster" }
frogdb-persistence = { path = "frogdb-server/crates/persistence" }
frogdb-acl = { path = "frogdb-server/crates/acl" }
frogdb-scripting = { path = "frogdb-server/crates/scripting" }
frogdb-core = { path = "frogdb-server/crates/core" }
frogdb-debug = { path = "frogdb-server/crates/debug" }
frogdb-telemetry = { path = "frogdb-server/crates/telemetry" }
frogdb-metrics-derive = { path = "frogdb-server/crates/metrics-derive" }
frogdb-testing = { path = "frogdb-server/crates/testing" }
frogdb-test-harness = { path = "frogdb-server/crates/test-harness" }
tokio-coz = { path = "frogdb-server/crates/tokio-coz" }

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# Raft consensus
openraft = { version = "0.9", features = ["serde", "storage-v2"] }

# HTTP server for admin API
axum = "0.7"
tower = "0.5"

# Profiling
tokio-metrics = "0.4"
tracing-flame = "0.2"

[profile.dev]
split-debuginfo = "unpacked"
debug = "line-tables-only"

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
