[package]
name = "frogdb-benches"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Micro-benchmarks for FrogDB"
publish = false

[dependencies]
frogdb-core.workspace = true
frogdb-protocol.workspace = true
bytes.workspace = true
tokio.workspace = true
criterion.workspace = true
tempfile.workspace = true
rand.workspace = true
redis-protocol.workspace = true

[[bench]]
name = "store"
harness = false

[[bench]]
name = "commands"
harness = false

[[bench]]
name = "persistence"
harness = false

[[bench]]
name = "protocol"
harness = false
