[package]
name = "frog-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "frog"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json"] }
