[package]
name = "frog-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "frog"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
redis = { version = "1.1", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json"] }
indicatif.workspace = true
comfy-table.workspace = true
dialoguer.workspace = true
zip.workspace = true
sha2.workspace = true
hex.workspace = true
toml.workspace = true
tempfile.workspace = true
