[package]
name = "frog-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false
autobenches = false
autotests = false

[lib]
name = "frog_cli"
path = "src/lib.rs"

[[bin]]
name = "frog"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
redis = { version = "1.1", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json"] }
semver = "1"
indicatif.workspace = true
comfy-table.workspace = true
dialoguer.workspace = true
zip.workspace = true
sha2.workspace = true
hex.workspace = true
toml.workspace = true
tempfile.workspace = true

[dev-dependencies]
frogdb-test-harness.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
