[package]
name = "frogdb-operator"
version = "0.1.0"
edition = "2024"
license = "BSL-1.1"
publish = false
description = "Kubernetes operator for FrogDB"

[lib]
name = "frogdb_operator"
path = "src/lib.rs"

[[bin]]
name = "frogdb-operator"
path = "src/main.rs"

[dependencies]
frogdb-config = { path = "../frogdb-server/crates/config" }
kube = { version = "3.1", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.27", features = ["v1_33"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.2", features = ["derive"] }
toml = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
frogdb-test-harness = { path = "../frogdb-server/crates/test-harness" }

[workspace]
