[package]
name = "frogdb-commands"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Data-structure command implementations for FrogDB"

[dependencies]
frogdb-core.workspace = true
frogdb-protocol.workspace = true
bytes.workspace = true
rand.workspace = true
serde_json.workspace = true
crc16.workspace = true
tracing.workspace = true
bitvec.workspace = true
ryu.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
