[package]
name = "frogdb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data structures, commands, and storage for FrogDB"

[features]
shuttle = ["dep:shuttle"]

[dependencies]
frogdb-protocol.workspace = true
bytes.workspace = true
griddle.workspace = true
bitflags.workspace = true
thiserror.workspace = true
tracing.workspace = true
xxhash-rust.workspace = true
crc16.workspace = true
tokio.workspace = true
ordered-float.workspace = true
shuttle = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
shuttle.workspace = true
proptest.workspace = true
