[package]
name = "frogdb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data structures, commands, and storage for FrogDB"

[features]
shuttle = ["dep:shuttle"]

[dependencies]
frogdb-protocol.workspace = true
bytes.workspace = true
griddle.workspace = true
bitflags.workspace = true
thiserror.workspace = true
tracing.workspace = true
xxhash-rust.workspace = true
crc16.workspace = true
murmur3.workspace = true
bitvec.workspace = true
tokio.workspace = true
tokio-util.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
rand.workspace = true
shuttle = { workspace = true, optional = true }
rocksdb.workspace = true
mlua.workspace = true
sha1.workspace = true
sha2.workspace = true
hex.workspace = true
linked-hash-map.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonpath-rust.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
shuttle.workspace = true
proptest.workspace = true
tempfile.workspace = true
serde_json.workspace = true
