[package]
name = "frogdb-debug"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Debug web UI and diagnostic tools for FrogDB"

[dependencies]
frogdb-core.workspace = true
frogdb-telemetry = { path = "../telemetry" }
tokio.workspace = true
hyper = { version = "1", features = ["http1", "server"] }
http-body-util = "0.1"
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
rust-embed = "8"
mime_guess = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
tracing.workspace = true
