[package]
name = "frogdb-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Metrics and observability for FrogDB"

[dependencies]
frogdb-core = { path = "../core" }

# Prometheus
prometheus = "0.13"

# OpenTelemetry
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "grpc-tonic"] }

# HTTP server
hyper = { version = "1", features = ["http1", "server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrent data structures
dashmap = "6"

# System info
sysinfo = "0.33"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Bytes
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
