[package]
name = "frogdb-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Metrics and observability for FrogDB"

[features]
default = []
testing = []

[dependencies]
frogdb-core = { path = "../core" }

# Prometheus
prometheus = "0.13"

# OpenTelemetry
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "grpc-tonic"] }

# HTTP server
hyper = { version = "1", features = ["http1", "server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrent data structures
dashmap = "6"

# System info
sysinfo = "0.33"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Bytes
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3"
frogdb-server = { path = "../server" }
frogdb-protocol = { path = "../protocol" }
redis-protocol = "5"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = { workspace = true }
frogdb-metrics = { path = ".", features = ["testing"] }
