[package]
name = "frogdb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FrogDB server binary"

[[bin]]
name = "frogdb-server"
path = "src/main.rs"

[features]
shuttle = ["dep:shuttle", "frogdb-core/shuttle"]
turmoil = ["dep:turmoil"]

[dependencies]
frogdb-protocol.workspace = true
frogdb-core.workspace = true
frogdb-metrics.workspace = true
bytes.workspace = true
rand.workspace = true
tokio.workspace = true
tokio-util.workspace = true
redis-protocol.workspace = true
figment.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
futures.workspace = true
bitvec.workspace = true
shuttle = { workspace = true, optional = true }
turmoil = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
futures.workspace = true
shuttle.workspace = true
turmoil.workspace = true
tempfile.workspace = true
reqwest = { version = "0.12", features = ["json"] }
proptest.workspace = true
frogdb-testing.workspace = true
rstest = "0.23"
