[package]
name = "frogdb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FrogDB server binary"

[[bin]]
name = "frogdb-server"
path = "src/main.rs"

[features]
shuttle = ["dep:shuttle", "frogdb-core/shuttle"]
turmoil = ["dep:turmoil"]
causal-profile = ["dep:tokio-coz"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[dependencies]
frogdb-protocol.workspace = true
frogdb-core.workspace = true
frogdb-debug.workspace = true
frogdb-replication.workspace = true
frogdb-commands.workspace = true
frogdb-telemetry.workspace = true
frogdb-macros = { path = "../frogdb-macros" }
bytes.workspace = true
rand.workspace = true
tokio.workspace = true
tokio-util.workspace = true
redis-protocol.workspace = true
figment.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
futures.workspace = true
bitvec.workspace = true
crc16.workspace = true
sha2.workspace = true
hex.workspace = true
shuttle = { workspace = true, optional = true }
turmoil = { workspace = true, optional = true }
tokio-coz = { workspace = true, optional = true }
openraft.workspace = true
axum.workspace = true
tower.workspace = true
schemars.workspace = true
socket2 = "0.5"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
hyper = { version = "1", features = ["http1", "server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
toml = "0.8"
futures.workspace = true
shuttle.workspace = true
turmoil.workspace = true
tempfile.workspace = true
reqwest = { version = "0.12", features = ["json"] }
proptest.workspace = true
frogdb-testing.workspace = true
rstest = "0.23"
frogdb-telemetry = { workspace = true, features = ["testing"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
