[package]
name = "frogdb-vll"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VLL (Very Lightweight Locking) for atomic multi-shard operations"

[dependencies]
bytes.workspace = true
tokio.workspace = true
frogdb-protocol.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
