[package]
name = "frogdb-benches"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Micro-benchmarks for FrogDB"
publish = false

[dependencies]
frogdb-core.workspace = true
frogdb-protocol.workspace = true
bytes.workspace = true
tokio.workspace = true
criterion.workspace = true
tempfile.workspace = true
rand.workspace = true
redis-protocol.workspace = true

[dev-dependencies]
# test-support exposes RocksStore's single-key put/get accessors used by the
# persistence bench (benches/persistence.rs, reaching RocksStore through
# frogdb-core's re-export). frogdb-benches is a leaf bench crate — nothing
# depends on it — so this never enters a production graph.
frogdb-persistence = { workspace = true, features = ["test-support"] }

[[bench]]
name = "store"
harness = false

[[bench]]
name = "commands"
harness = false

[[bench]]
name = "persistence"
harness = false

[[bench]]
name = "protocol"
harness = false
