[package]
name = "frogdb-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

# Prevent this from being part of the parent workspace
[workspace]

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
arbitrary = { version = "1", features = ["derive"] }
bytes = "1"
ordered-float = "4"
serde_json = "1"

# Path deps to fuzzed crates
frogdb-protocol = { path = "../../frogdb-server/crates/protocol" }
frogdb-persistence = { path = "../../frogdb-server/crates/persistence" }
frogdb-cluster = { path = "../../frogdb-server/crates/cluster" }
frogdb-acl = { path = "../../frogdb-server/crates/acl" }
frogdb-scripting = { path = "../../frogdb-server/crates/scripting" }
frogdb-types = { path = "../../frogdb-server/crates/types" }
frogdb-replication = { path = "../../frogdb-server/crates/replication" }
frogdb-search = { path = "../../frogdb-server/crates/search" }
frogdb-core = { path = "../../frogdb-server/crates/core" }
frogdb-commands = { path = "../../frogdb-server/crates/commands" }
tokio = { version = "1", features = ["sync"] }

# Also pull in redis-protocol for raw RESP decoding
redis-protocol = { version = "5", features = ["bytes", "codec", "resp3"] }

[[bin]]
name = "resp_parse"
path = "fuzz_targets/resp_parse.rs"
doc = false

[[bin]]
name = "deserialize"
path = "fuzz_targets/deserialize.rs"
doc = false

[[bin]]
name = "rpc_parse"
path = "fuzz_targets/rpc_parse.rs"
doc = false

[[bin]]
name = "acl_parse"
path = "fuzz_targets/acl_parse.rs"
doc = false

[[bin]]
name = "script_parse"
path = "fuzz_targets/script_parse.rs"
doc = false

[[bin]]
name = "glob_match"
path = "fuzz_targets/glob_match.rs"
doc = false

[[bin]]
name = "stream_id_parse"
path = "fuzz_targets/stream_id_parse.rs"
doc = false

[[bin]]
name = "filter_expr_parse"
path = "fuzz_targets/filter_expr_parse.rs"
doc = false

[[bin]]
name = "ts_decompress"
path = "fuzz_targets/ts_decompress.rs"
doc = false

[[bin]]
name = "json_path"
path = "fuzz_targets/json_path.rs"
doc = false

[[bin]]
name = "hll_deserialize"
path = "fuzz_targets/hll_deserialize.rs"
doc = false

[[bin]]
name = "repl_frame_decode"
path = "fuzz_targets/repl_frame_decode.rs"
doc = false

[[bin]]
name = "search_query_parse"
path = "fuzz_targets/search_query_parse.rs"
doc = false

[[bin]]
name = "search_expr_parse"
path = "fuzz_targets/search_expr_parse.rs"
doc = false

[[bin]]
name = "bitfield_ops"
path = "fuzz_targets/bitfield_ops.rs"
doc = false

[[bin]]
name = "bitop"
path = "fuzz_targets/bitop.rs"
doc = false

[[bin]]
name = "aggregate_parse"
path = "fuzz_targets/aggregate_parse.rs"
doc = false

[[bin]]
name = "ft_create_parse"
path = "fuzz_targets/ft_create_parse.rs"
doc = false

[[bin]]
name = "skiplist_ops"
path = "fuzz_targets/skiplist_ops.rs"
doc = false

[[bin]]
name = "cmd_dispatch"
path = "fuzz_targets/cmd_dispatch.rs"
doc = false
